show closest brewery or show search option

--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -17,8 +17,8 @@
 
 .home-tagline {
   color: #d9910a;
-  font-family:  Arial;
-  font-size: 60px;
+  font-family:  Courier;
+  font-size: 50px;
   text-align: center;
   margin: 20px;
 }
