--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,8 +16,12 @@
 
 @import "config/variables";
 
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 @import "components/index";
 @import "pages/index";
+
+
 
 
