--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -15,7 +15,7 @@
 
 .form {
   .btn-beer {
-      color: white;
+      color: rgb(216, 216, 216);
       font-size: 40px;
       border: 2px solid #d9910a;
       margin: 10px;
