--- a/app/assets/stylesheets/pages/breweries.scss
+++ b/app/assets/stylesheets/pages/breweries.scss
@@ -2,7 +2,9 @@
   min-height: 100vh;
   min-width: 100vw;
   background-color: black;
- padding: 60px;
+  padding: 60px;
+  font-family: Geneva;
+  font-size: 14px;
 }
 
 // Show brewery if there is a postal code
@@ -18,12 +20,13 @@
 
 .brewery-info {
   display: flex;
+  justify-content: space-around;
   margin-top: 20px;
 }
 
-.brewery-map {
-  min-height: 200px;
-  min-width: 200px;
+#brewery-map {
+  min-height: 240px;
+  min-width: 300px;
   background-color: red;
   border-radius: 2px;
 }
@@ -36,6 +39,7 @@
 
 .brewery-beers {
   margin: 20px 0px;
+  max-width: 90%;
   display: flex;
   justify-content: space-around;
 }
@@ -78,7 +82,36 @@
   font-size: 14px;
 }
 
+.btn-biertje {
+  padding: 10px;
+  color: #d9910a;
+  background-color: black;
+  border: 2px solid #d9910a;
+
+  &:hover {
+    background-color: #d9910a;
+    color: black;
+    text-decoration: none;
+  }
+}
+
 
 h2 {
   font-family: Geneva;
+}
+
+// Show underneeath eachother on a smaller xcreen
+@media screen and (max-width: 1100px) {
+  .brewery-info {
+    display: block;
+  }
+  #brewery-map {
+  margin: 30px;
+}
+}
+
+@media screen and (max-width: 900px) {
+  .breweries-closest {
+    margin: 0px;
+}
 }
