--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -2,7 +2,7 @@
   .input-postcode {
     text-align: center;
     font-size: 52px;
-    background-color: rgba(21, 21, 23, 0);
+    background-color: $transparant;
     max-width: 500px;
     border: none;
     margin: 10px;
@@ -17,13 +17,13 @@
   .btn-beer {
       color: rgb(216, 216, 216);
       font-size: 40px;
-      border: 2px solid #d9910a;
+      border: 2px solid $yellow;
       margin: 10px;
       padding: 10px 15px;
       background-color: rgba(21, 21, 23, 0.5);
       &:hover {
         color: black;
-        background-color: #d9910a;
+        background-color: $yellow;
       }
     }
 }
