--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -9,15 +9,19 @@
 }
 
 .home-content {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.8);
     max-width: 600px;
-    margin: auto;
     padding: 40px 20px;
+    .form {
+  .input-postcode {
+    margin-left: 27px;
+  }
+}
 }
 
 .home-tagline {
   color: #d9910a;
-  font-family:  Courier;
+  font-family: $headfont;
   font-size: 50px;
   text-align: center;
   margin: 20px;
