--- a/app/views/brewers/index.html.erb
+++ b/app/views/brewers/index.html.erb
@@ -23,7 +23,6 @@
         <div class="brewery-beers">
           <% @beers.each do |beer|  %>
           <div class="brewery-beer-card">
-            <!-- <img src="http://cliparts.co/cliparts/piq/KBx/piqKBxbrT.png" alt="beer" width="60px"> <br> -->
             <%= beer.name %> <br>
             <%= beer.style %>,
             <%= beer.alcohol %>% <br>
@@ -37,20 +36,32 @@
         <img src="https://media.giphy.com/media/ZzN0sVmiYGRB6/giphy.gif" alt="beer me">
         <br><br>
         <% end %>
+        <!-- Show if brewery is open today -->
+        <% if @brewery.open_today  %>
+        <br><div class="label label-success">OPEN TODAY</div> <br><br>
+        <% else %>
+        <br><div class="label label-danger">CLOSED TODAY</div> <br> <br>
+        Open again on: <% JSON.parse(@brewery.open).each do |day| %>
+        <%= day %>
+        <% end %>
+        <% end %> <br>
 
+        <!-- Show adress of brewery -->
         Address: <%= @brewery.address %>,
         <%= @brewery.zipcode %>,
-        <%= @brewery.city %> <br>
+        <%= @brewery.city %> <br><br>
 
-        <% if @brewery.open_today  %>
-        <div class="label label-success">OPEN</div>
+        <!-- Show icon depending on distance -->
+        <% if @zipcode %>
+        <% if @distance < 3 %>
+        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+        <% elsif @distance < 20 %>
+        <i class="fa fa-bicycle" aria-hidden="true"></i>
         <% else %>
-        <div class="label label-danger">CLOSED</div>
+        <i class="fa fa-bicycle" aria-hidden="true"></i>
         <% end %>
-
+        <%= @brewery.distance(@zipcode).round(2) %> km away
         <br>
-        Open on: <% JSON.parse(@brewery.open).each do |day| %>
-        <%= day %>
         <% end %>
 
       </div>
@@ -83,9 +94,10 @@
     <h2>Other breweries</h2>
     <% @breweries.each do |brewery| %>
     <div class="breweries-name">
-      <%= brewery.name %>, <%= brewery.city %>
+      <%= link_to brewery.name, brewers_path(brewery: brewery), class: "breweries-link" %>, <%= brewery.city %>
     </div>
     <div class="breweries-click">
+
       <!-- Show if brewery is open today or closed -->
       <div class="open">
         <% if brewery.open_today  %>
@@ -94,12 +106,16 @@
         <div class="label label-danger">CLOSED</div>
         <% end %>
       </div>
-      <!-- Show brewery -->
-      <%= link_to "SHOW", brewers_path(brewery: brewery), class: "label label-warning" %>
-    </div><br>
-    <% end %>
 
-    <br> <br>
+      <!-- Compute distance of all breweries -->
+    </div>
+        <% if @brewery && @zipcode %>
+             <%= brewery.distance(@zipcode).round(0) %> km away
+        <% end %> <br>
+
+    <!-- link to show brewery -->
+
+      <% end %> <br>
     <%= link_to "search another brewery", brewers_path, class: "btn-biertje"  %>
     <br><br>
   </div>
