--- a/app/assets/stylesheets/pages/breweries.scss
+++ b/app/assets/stylesheets/pages/breweries.scss
@@ -63,7 +63,7 @@
 // If there is no postal code show form to fill in
 
 .breweries-message {
-  color: rgb(216, 216, 216);
+  color: $almost_white;
   background-color: rgb(90, 0, 0);
   padding: 20px;
   margin: 0px 60px;
