--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,23 @@
 </head>
 <body>
 
-<%= yield %>
+  <div class="wrapper-all">
 
-<%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&sensor=false&key=AIzaSyB01fu7jjQeTWnmeP_5cacIWXV_U5XHg4U" %>
-  <%= javascript_include_tag "https://cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js" %>
-<%= javascript_include_tag 'application'%>
+    <%= yield %>
 
-<%= yield(:after_js) %>
+
+    <%= render 'shared/footer' %>
+
+    <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&sensor=false&key=AIzaSyB01fu7jjQeTWnmeP_5cacIWXV_U5XHg4U" %>
+    <%= javascript_include_tag "https://cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js" %>
+    <%= javascript_include_tag 'application'%>
+
+    <%= yield(:after_js) %>
+
+  </div>
+
+
+
 
 </body>
 </html>
