hide APIkey, last changes, let's have a beer

--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -17,7 +17,7 @@
 .form {
   .btn-beer {
     font-family: $smallfont;
-      color: rgb(216, 216, 216);
+      color: $almost_white;
       font-size: 40px;
       border: 2px solid $yellow;
       margin: 10px;
