--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,3 @@
 <div class="footer">
-  This is created as an assignment for Oberon on 28-07-2016
+  This weppage is created by <%= link_to "Aafke", "https://github.com/Aafke89"  %> as an assignment for <%= link_to "Oberon", "https://www.oberon.nl/"  %> on 28-07-2016.
 </div>
