--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -6,6 +6,14 @@
 .footer {
   position: absolute;
   bottom: 20px;
-  left: 20px;
-  color: $almost_white;
+  color: #6f6f6f;
+  width: 100%;
+  text-align: center;
+  a {
+    font-style: italic;
+     color: #6f6f6f;
+    &:hover {
+     text-decoration: none;
+    }
+  }
 }
