--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Beerbeerbeer</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
 
   <%= csrf_meta_tags %>
   <%= favicon_link_tag 'favicon.ico' %>
@@ -13,19 +13,15 @@
 
     <%= yield %>
 
-
     <%= render 'shared/footer' %>
 
-    <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&sensor=false&key=AIzaSyB01fu7jjQeTWnmeP_5cacIWXV_U5XHg4U" %>
+    <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&sensor=false&key=#{ENV["GOOGLE_API_KEY"]}" %>
     <%= javascript_include_tag "https://cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js" %>
     <%= javascript_include_tag 'application'%>
 
     <%= yield(:after_js) %>
 
   </div>
-
-
-
 
 </body>
 </html>
